tests/negative/gold/prefix-test.gold
tests/negative/prefix-test.toit:6:5: error: Can't assign to unknown 'unresolved'
  ++unresolved
    ^~~~~~~~~~
tests/negative/prefix-test.toit:7:5: error: Can't assign to unknown 'unresolved'
  ++unresolved
    ^~~~~~~~~~
Compilation failed
